--- a/my.kv
+++ b/my.kv
@@ -178,15 +178,15 @@
             on_release:
                 root.manager.transition.direction = "up"
                 root.log_out()
-
         Button:
-            pos_hint:{"x": 0.8, "top":0.125}
+            pos_hint:{"x": 0.0, "top":0.125}
             size_hint:0.2, 0.1
-            text: "My Sets"
+            text: "Main menu"
             font_size: (min(root.width, root.height)/18)**(0.8)
             on_release:
                 root.manager.transition.direction = "up"
-                root.my_sets()
+                root.mainMenu()
+
         ScrollView:
 
             pos_hint:{"x": 0.1, "top":0.75}
@@ -243,6 +243,14 @@
             on_release:
                 root.manager.transition.direction = "right"
                 root.browse_sets()
+        Button:
+            pos_hint:{"x": 0.8, "top":0.125}
+            size_hint:0.2, 0.1
+            text: "Rate"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.mainMenu()
 
         ScrollView:
 
@@ -299,15 +307,16 @@
             on_release:
                 root.manager.transition.direction = "up"
                 root.log_out()
-
         Button:
-            pos_hint:{"x": 0.8, "top":0.125}
+            pos_hint:{"x": 0.0, "top":0.125}
             size_hint:0.2, 0.1
-            text: "Available sets"
+            text: "Main menu"
             font_size: (min(root.width, root.height)/18)**(0.8)
             on_release:
                 root.manager.transition.direction = "up"
-                root.available_sets()
+                root.mainMenu()
+
+
         ScrollView:
 
             pos_hint:{"x": 0.1, "top":0.75}
@@ -351,3 +360,184 @@
         text:"Incorrect email"
         size_hint:0.6,0.1
         pos_hint: {"x": 0.2,"top":0.9}
+
+<HomeScreenWindow>:
+    name: 'homeScreenWindow'
+
+
+    canvas:
+        Color:
+            rgba: bg_color
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
+    FloatLayout:
+
+        Label:
+            pos_hint:{"x": 0.1, "top":0.95}
+            size_hint:0.8, 0.15
+            text: "Main menu"
+            font_size: (min(root.width, root.height)/10)**(0.8)
+
+        Button:
+            pos_hint:{"x": 0.8, "top":0.975}
+            size_hint:0.2, 0.1
+            text: "Log out"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.log_out()
+
+        Button:
+            pos_hint:{"x": 0.4, "top":0.8}
+            size_hint:0.2, 0.1
+            text: "My Sets"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.mySetsButton()
+        Button:
+            pos_hint:{"x": 0.4, "top":0.7}
+            size_hint:0.2, 0.1
+            text: "Create flashcard"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.createFlashcard()
+
+        Button:
+            pos_hint:{"x": 0.4, "top":0.6}
+            size_hint:0.2, 0.1
+            text: "Learn"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.available_sets()
+
+<CreateFlashcard1>:
+    name: 'createFlashcard1'
+    front: front
+    back: back
+
+    canvas:
+        Color:
+            rgba: bg_color
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
+    FloatLayout:
+        cols:1
+
+        Label:
+            pos_hint:{"x": 0.1, "top":0.95}
+            size_hint:0.8, 0.15
+            text: "Create your own flashcard!"
+            font_size: (min(root.width, root.height)/10)**(0.8)
+
+        Button:
+            pos_hint:{"x": 0.8, "top":0.975}
+            size_hint:0.2, 0.1
+            text: "Log out"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.log_out()
+        Button:
+            pos_hint:{"x": 0.0, "top":0.125}
+            size_hint:0.2, 0.1
+            text: "Main menu"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.mainMenu()
+
+        TextInput:
+            id: front
+            font_size: (min(root.width, root.height)/14)**(0.8)
+            multiline: True
+            pos_hint: {"x": 0.45, "top":0.6}
+
+        TextInput:
+            id: back
+            font_size: (min(root.width, root.height)/10)**(0.8)
+            multiline: True
+            pos_hint: {"x": 0.45, "top":0.6}
+
+        Label:
+            size_hint: 0.5,0.1
+            pos_hint: {"x":0, "top":0.8-0.13}
+            text: "Front page: "
+            font_size: (min(root.width, root.height)/14)**(0.8)
+
+        Label:
+            size_hint: 0.5,0.1
+            pos_hint: {"x":0, "top":0.8-0.13*2}
+            text: "Back page: "
+            font_size: (min(root.width, root.height)/14)**(0.8)
+
+<CreateFlashcard>:
+    name: 'createFlashcard'
+
+
+    canvas:
+        Color:
+            rgba: bg_color
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
+    front: front
+    back: back
+
+    FloatLayout:
+
+        Label:
+            text: 'Create your own Flashcard!'
+            font_size: (min(root.width, root.height)/10)**(0.8)
+            pos_hint: {"x":0.3, "top":0.95}
+            size_hint: 0.4, 0.15
+
+        Label:
+            text:"Front page: "
+            font_size: (min(root.width, root.height)/14)**(0.8)
+            pos_hint: {"x":0.1, "top":0.75}
+            size_hint: 0.35, 0.1
+
+        TextInput:
+            id: front
+            font_size: (min(root.width, root.height)/14)**(0.8)
+            multiline: False
+            pos_hint: {"x": 0.45 , "top":0.75}
+            size_hint: 0.4, 0.1
+
+        Label:
+            text:"Back page: "
+            font_size: (min(root.width, root.height)/14)**(0.8)
+            pos_hint: {"x":0.1, "top":0.6}
+            size_hint: 0.35, 0.1
+
+        TextInput:
+            id: back
+            font_size: (min(root.width, root.height)/10)**(0.8)
+            multiline: False
+            pos_hint: {"x": 0.45, "top":0.6}
+            size_hint: 0.4, 0.1
+
+        Button:
+            pos_hint:{"x":0.35,"y":0.1}
+            size_hint: 0.3, 0.2
+            font_size: (min(root.width, root.height)/10)**(0.8)
+            text: "Create"
+            on_release:
+                root.manager.transition.direction = "up"
+                root.createFlashcard()
+        Button:
+            pos_hint:{"x": 0.0, "top":0.125}
+            size_hint:0.2, 0.1
+            text: "Main menu"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.mainMenu()
