--- a/my.kv
+++ b/my.kv
@@ -360,6 +360,11 @@
         text:"Incorrect email"
         size_hint:0.6,0.1
         pos_hint: {"x": 0.2,"top":0.9}
+<P2>
+    Label:
+        text:"You have created a flashcard!"
+        size_hint:0.6,0.1
+        pos_hint: {"x": 0.2,"top":0.5}
 
 <HomeScreenWindow>:
     name: 'homeScreenWindow'
