--- a/my.kv
+++ b/my.kv
@@ -435,11 +435,11 @@
         Button:
             pos_hint:{"x": 0.4, "top":0.6}
             size_hint:0.2, 0.1
-            text: "Learn"
+            text: "Find set"
             font_size: (min(root.width, root.height)/18)**(0.8)
             on_release:
                 root.manager.transition.direction = "up"
-                root.available_sets()
+                root.searchSet()
 
 
 <CreateFlashcard>:
@@ -566,3 +566,108 @@
             on_release:
                 root.manager.transition.direction = "up"
                 root.mainMenu()
+
+<SearchSet>:
+    name: 'searchSet'
+
+
+    canvas:
+        Color:
+            rgba: bg_color
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
+    keyword: keyword
+
+    FloatLayout:
+
+        Label:
+            text: 'Find your set!'
+            font_size: (min(root.width, root.height)/10)**(0.8)
+            pos_hint: {"x":0.3, "top":0.95}
+            size_hint: 0.4, 0.15
+
+        Label:
+            text:"Key word"
+            font_size: (min(root.width, root.height)/14)**(0.8)
+            pos_hint: {"x":0.1, "top":0.75}
+            size_hint: 0.35, 0.1
+
+        TextInput:
+            id: keyword
+            font_size: (min(root.width, root.height)/14)**(0.8)
+            multiline: True
+            pos_hint: {"x": 0.45 , "top":0.75}
+            size_hint: 0.4, 0.1
+
+
+        Button:
+            pos_hint:{"x":0.35,"y":0.1}
+            size_hint: 0.3, 0.2
+            font_size: (min(root.width, root.height)/10)**(0.8)
+            text: "Find"
+            on_release:
+                root.manager.transition.direction = "up"
+                root.searchSet()
+        Button:
+            pos_hint:{"x": 0.0, "top":0.125}
+            size_hint:0.2, 0.1
+            text: "Main menu"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.mainMenu()
+
+<AvailableSets>
+    name: 'availableSets'
+
+    grid: grid
+    set_name: set_name
+
+    canvas:
+        Color:
+            rgba: bg_color
+        Rectangle:
+            pos: self.pos
+            size: self.size
+
+    FloatLayout:
+
+        Label:
+            id: set_name
+            pos_hint:{"x": 0.1, "top":0.95}
+            size_hint:0.8, 0.15
+            text: "Available sets"
+            font_size: (min(root.width, root.height)/10)**(0.8)
+
+        Button:
+            pos_hint:{"x": 0.0, "top":0.125}
+            size_hint:0.2, 0.1
+            text: "Menu"
+            font_size: (min(root.width, root.height)/18)**(0.8)
+            on_release:
+                root.manager.transition.direction = "up"
+                root.mainMenu()
+
+        ScrollView:
+
+            pos_hint:{"x": 0.1, "top":0.75}
+            size_hint: 0.8, 0.7
+
+            do_scroll_x: False
+            do_scroll_y: True
+
+            GridLayout:
+                id: grid
+
+                pos: (0,0)
+                size_hint_y: None
+                thickness: 2
+                padding: 10, 10
+
+                row_default_height: 0.1 * root.height
+                row_force_default: True
+
+
+                cols: 2
